--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.7",
     "terser-webpack-plugin": "^5.1.1",
     "web-vitals": "^1.0.1"
   },
