--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "focus-visible": "^5.2.0",
     "framer-motion": "^3.7.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -20,6 +22,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-form": "^8.3.7",
+    "redux-thunk": "^2.3.0",
     "terser-webpack-plugin": "^5.1.1",
     "web-vitals": "^1.0.1"
   },
