--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "flv.js": "^1.5.0",
     "focus-visible": "^5.2.0",
     "framer-motion": "^3.7.0",
     "lodash": "^4.17.21",
