Heroku Connection of Rest-Apis

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -3,5 +3,7 @@ WORKDIR '/app'
 
 COPY package.json .
 RUN npm install --force
+RUN npm install react-scripts@3.4.1 -g --silent
+
 COPY . .
 CMD ["npm","start"]
