--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,9 +1,20 @@
-FROM node:alpine
-WORKDIR '/app'
+# pull official base image
+FROM node:13.12.0-alpine
 
-COPY package.json .
-RUN npm install --force
+# set working directory
+WORKDIR /client
+
+# add `/app/node_modules/.bin` to $PATH
+ENV PATH /client/node_modules/.bin:$PATH
+
+# install app dependencies
+COPY package.json ./
+COPY package-lock.json ./
+RUN npm install --silent
 RUN npm install react-scripts@3.4.1 -g --silent
 
-COPY . .
-CMD ["npm","start"]
+# add app
+COPY . ./
+
+# start app
+CMD ["npm", "start"]
