Client and rtmp server connected

--- a/rtmpserver/Dockerfile
+++ b/rtmpserver/Dockerfile
@@ -1,9 +1,31 @@
-FROM node:alpine
-WORKDIR '/app'
+FROM node:10.20.1-alpine as install-npm
 
-COPY package.json .
-RUN npm install --force
-COPY . .
-EXPOSE 1935
-EXPOSE 8000
-CMD ["npm","start"]
+RUN mkdir -p /rtmpserver
+WORKDIR /rtmpserver
+
+# install deps
+COPY package*.json /rtmpserver/
+RUN npm install
+
+FROM node:10.20.1-alpine
+
+RUN apk update && \
+    apk upgrade && \
+    apk add 'ffmpeg>4.0.0'
+
+RUN mkdir -p /rtmpserver
+WORKDIR /rtmpserver
+
+ARG NODE_ENV=production
+ENV NODE_ENV=${NODE_ENV}
+
+ENV FFMPEG_PATH='/usr/bin/ffmpeg'
+
+# Copy deps
+COPY --from=install-npm /rtmpserver/node_modules /rtmpserver/node_modules
+# Setup workdir
+COPY . /rtmpserver
+
+EXPOSE 8080
+
+CMD ["node","app.js"]
