--- a/rest-api2/package.json
+++ b/rest-api2/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "rest-api2",
+  "name": "node-js-express-upload-download-files",
   "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "description": "Node.js Express Rest APIs to Upload/Download Files",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "keywords": [
+    "node js",
+    "upload",
+    "download",
+    "file",
+    "multipart",
+    "rest api",
+    "express",
+    "multer"
+  ],
+  "author": "Prime15550",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-fileupload": "^1.2.1",
-    "http": "0.0.1-security",
-    "logger": "0.0.1",
-    "morgan": "^1.10.0",
-    "path": "^0.12.7"
+    "multer": "^1.4.2"
   }
 }
